# flow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODOS.md  jitpack.yml  test_simple.flow
.github/workflows/: build.yml  publish-crates.yml  quality.yml  release.yml  test.yml
flow_c/: Cargo.toml  functions  hello  test_analysis_error.flow  test_file.flow  test_parse_error.flow
flow_c/examples/: attribute_macro_demo.flow  conditional.flow  extern_test.flow  ffi.flow  for_countdown.flow  for_fibonacci.flow  for_loop.flow  for_nested.flow  for_simple.flow  functions.flow  hello.flow  io.flow  lambda.flow  match.flow  memory.flow  multi_file_test.flow  pipe.flow  print.flow  simple_extern.flow  simple_no_loop.flow  std_io.flow  std_math.flow  struct.flow  types.flow  while.flow
flow_c/examples/std/: io.flow  math.flow
flow_c/flow_analyzer/: Cargo.toml
flow_c/flow_analyzer/src/: lib.rs
flow_c/flow_analyzer/test_files/std/: math.flow
flow_c/flow_ast/: Cargo.toml
flow_c/flow_ast/src/: diagnostic.rs  lib.rs
flow_c/flow_cli/: Cargo.toml
flow_c/flow_cli/src/: error_reporter.rs  main.rs  module_manager.rs
flow_c/flow_codegen/: Cargo.toml
flow_c/flow_codegen/src/: lib.rs
flow_c/flow_compiler/: Cargo.toml  USAGE.md
flow_c/flow_compiler/examples/: unified_api_demo.rs
flow_c/flow_compiler/src/: aot_wrapper.rs  aot_wrapper_old.rs  java_wrapper.rs  jit_engine.rs  jit_wrapper.rs  lib.rs
flow_c/flow_jni/: Cargo.toml
flow_c/flow_jni/src/: lib.rs
flow_c/flow_lexer/: Cargo.toml
flow_c/flow_lexer/src/: lib.rs
flow_c/flow_lsp/: Cargo.toml  README.md
flow_c/flow_lsp/src/: analyzer_bridge.rs  document.rs  handlers.rs  lib.rs  main.rs  server.rs  utils.rs
flow_c/flow_parser/: Cargo.toml
flow_c/flow_parser/src/: lib.rs
flow_c/flow_runtime/: Cargo.toml
flow_c/flow_runtime/src/: lib.rs
flow_c/flow_stdlib/: Cargo.toml
flow_c/flow_stdlib/src/: lib.rs
flow_c/flow_transpiler/: Cargo.toml
flow_c/flow_transpiler/flow_transpiler_java/: Cargo.toml
flow_c/flow_transpiler/flow_transpiler_java/examples/: debug_bytecode.rs  generate_bytecode.rs  run_bytecode.rs
flow_c/flow_transpiler/flow_transpiler_java/src/: bytecode.rs  class_writer.rs  constant_pool.rs  lib.rs  ristretto_writer.rs
flow_c/flow_transpiler/src/: lib.rs
flow_c/src/: ast.rs  lexer.rs
interop/java/: README.md  SETUP.md  build.gradle  build.sh  pom.xml
interop/java/lib/: libflow_jni.dylib
interop/java/src/flow/bridge/: FlowBridge.java
interop/java/src/flow/examples/: CallFlowExample.java  JavaInteropExample.java  NativeFlowExample.java  RuntimeCompileExample.java
interop/java/src/flow/runtime/: FlowRuntime.java  Module.java  ModuleRegistry.java
