[package]
name = "flow_analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantic analyzer for the Flow programming language"
keywords = ["flow", "analyzer", "type-checker"]
categories = ["compilers", "development-tools"]

[dependencies]
flow_ast = { version = "0.1.0", path = "../flow_ast" }
flow_parser = { version = "0.1.0", path = "../flow_parser" }
