[package]
name = "flow_ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Abstract Syntax Tree definitions for the Flow programming language"
keywords = ["flow", "ast", "compiler"]
categories = ["compilers", "development-tools"]

[dependencies]
