[package]
name = "flow_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
flow_ast = { path = "../flow_ast" }
flow_lexer = { path = "../flow_lexer" }
flow_parser = { path = "../flow_parser" }
flow_analyzer = { path = "../flow_analyzer" }
flow_codegen = { path = "../flow_codegen" }
flow_runtime = { path = "../flow_runtime" }
flow_transpiler = { path = "../flow_transpiler" }
flow_transpiler_java = { path = "../flow_transpiler/flow_transpiler_java" }
clap.workspace = true
ariadne.workspace = true
codespan-reporting.workspace = true
indicatif.workspace = true
console.workspace = true
colored.workspace = true
