[package]
name = "flow_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the Flow programming language"
keywords = ["flow", "cli", "compiler"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
flow_ast = { version = "0.1.0", path = "../flow_ast" }
flow_lexer = { version = "0.1.0", path = "../flow_lexer" }
flow_parser = { version = "0.1.0", path = "../flow_parser" }
flow_analyzer = { version = "0.1.0", path = "../flow_analyzer" }
flow_compiler = { version = "0.1.0", path = "../flow_compiler" }
flow_runtime = { version = "0.1.0", path = "../flow_runtime" }
flow_transpiler = { version = "0.1.0", path = "../flow_transpiler" }
flow_transpiler_java = { version = "0.1.0", path = "../flow_transpiler/flow_transpiler_java" }
clap.workspace = true
ariadne.workspace = true
codespan-reporting.workspace = true
indicatif.workspace = true
console.workspace = true
colored.workspace = true
