[package]
name = "flow_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
flow_ast = { path = "../flow_ast" }
flow_transpiler = { path = "../flow_transpiler" }
flow_transpiler_java = { path = "../flow_transpiler/flow_transpiler_java" }
thiserror = "1.0"
cranelift = "0.108"
cranelift-jit = "0.108"
cranelift-module = "0.108"
cranelift-object = "0.108"
cranelift-frontend = "0.108"
cranelift-native = "0.108"
tempfile = "3.8"

[dev-dependencies]
flow_parser = { path = "../flow_parser" }
flow_analyzer = { path = "../flow_analyzer" }