[package]
name = "flow_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
flow_ast = { path = "../flow_ast" }
flow_transpiler = { path = "../flow_transpiler" }
flow_transpiler_java = { path = "../flow_transpiler/flow_transpiler_java" }
thiserror = "1.0"
cranelift = "0.125.4"
cranelift-jit = "0.125.4"
cranelift-module = "0.125.4"
cranelift-object = "0.125.4"
cranelift-frontend = "0.125.4"
cranelift-native = "0.125.4"
tempfile = "3.8"

[dev-dependencies]
flow_parser = { path = "../flow_parser" }
flow_analyzer = { path = "../flow_analyzer" }