[package]
name = "flow_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JIT and AOT compiler for the Flow programming language using Cranelift"
keywords = ["flow", "compiler", "jit", "cranelift"]
categories = ["compilers", "development-tools"]

[dependencies]
flow_ast = { version = "0.1.0", path = "../flow_ast" }
flow_transpiler = { version = "0.1.0", path = "../flow_transpiler" }
flow_transpiler_java = { version = "0.1.0", path = "../flow_transpiler/flow_transpiler_java" }
thiserror = "1.0"
cranelift = "0.125.4"
cranelift-jit = "0.125.4"
cranelift-module = "0.125.4"
cranelift-object = "0.125.4"
cranelift-frontend = "0.125.4"
cranelift-native = "0.125.4"
tempfile = "3.8"

[dev-dependencies]
flow_parser = { version = "0.1.0", path = "../flow_parser" }
flow_analyzer = { version = "0.1.0", path = "../flow_analyzer" }