[package]
name = "flow_jni"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JNI bindings for the Flow programming language runtime"
keywords = ["flow", "jni", "java"]
categories = ["compilers", "development-tools", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
flow_compiler = { path = "../flow_compiler" }
flow_parser = { path = "../flow_parser" }
flow_lexer = { path = "../flow_lexer" }
flow_ast = { path = "../flow_ast" }
cranelift = "0.112"
cranelift-jit = "0.112"
cranelift-module = "0.112"
jni = "0.21"
libc = "0.2"
lazy_static = "1.4"

[dev-dependencies]
