[package]
name = "flow_lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "flow-lsp"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
flow_ast = { path = "../flow_ast" }
flow_lexer = { path = "../flow_lexer" }
flow_parser = { path = "../flow_parser" }
flow_analyzer = { path = "../flow_analyzer" }
flow_transpiler = { path = "../flow_transpiler" }

# JSON-RPC and LSP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
ropey = "1.6"
url = "2.5"
