[package]
name = "flow_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime library for the Flow programming language"
keywords = ["flow", "runtime", "vm"]
categories = ["compilers", "development-tools"]

[dependencies]
