[package]
name = "flow_transpiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transpiler infrastructure for the Flow programming language"
keywords = ["flow", "transpiler", "codegen"]
categories = ["compilers", "development-tools"]

[dependencies]
flow_ast = { version = "0.1.0", path = "../flow_ast" }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
flow_parser = { version = "0.1.0", path = "../flow_parser" }
flow_lexer = { version = "0.1.0", path = "../flow_lexer" }
