[package]
name = "flow_transpiler_java"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Java bytecode transpiler for the Flow programming language"
keywords = ["flow", "transpiler", "java", "jvm"]
categories = ["compilers", "development-tools"]

[[example]]
name = "generate_bytecode"
path = "examples/generate_bytecode.rs"

[[example]]
name = "debug_bytecode"
path = "examples/debug_bytecode.rs"

[[example]]
name = "run_bytecode"
path = "examples/run_bytecode.rs"

[dependencies]
flow_ast = { version = "0.1.0", path = "../../flow_ast" }
flow_transpiler = { version = "0.1.0", path = ".." }
anyhow = "1.0"
thiserror = "1.0"
byteorder = "1.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
ristretto_classfile = "0.26"

[dev-dependencies]
flow_parser = { version = "0.1.0", path = "../../flow_parser" }
flow_lexer = { version = "0.1.0", path = "../../flow_lexer" }
